tdf#90575 sw: fix pasting DDE links

Regression from commit 0761f81643a6890457e9ef7d913ab5c88c2593a4 (123792:
complete annotations on text ranges feature, 2013-12-19), the problem
was that the added additional IDocumentMarkAccess::GetType() check in
lcl_FindDdeBookmark(), which means that the function no longer finds
bookmarks with the matching name, only real DDE marks. This is a
problem, as SwTrnsfrDdeLink::WriteData() depends on the fact that
sw::mark::Bookmark inherits from sw::mark::DdeBookmark. As a result, the
fast IDocumentMarkAccess::GetType() (that intentionally doesn't handle
inheritance for performance reasons) can't be used here.

(cherry picked from commit e06e2cb18874987d2dafd4faa0a8b71fc0aa6453)

Conflicts:
	sw/qa/extras/uiwriter/uiwriter.cxx

Change-Id: I2b7a07c18b641ac991f3227812a609dedc960e08
Reviewed-on: https://gerrit.libreoffice.org/17447
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>